Convert app to a pwa

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="manifest" href="/manifest.json"/>
+    <link rel="apple-touch-icon" sizes="57x57" href="/img/icons/apple-touch-icon-60x60.png">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="apple-mobile-web-app-title" content="Cleaning-Service">
+    <meta name="msapplication-TileImage" content="/img/icons/msapplication-icon-144x144.png">
+    <meta name="msapplication-TileColor" content="#000">
     <title>cleaning-service</title>
   </head>
   <body>
